feat: upgrade versions
spring boot 3.2
hibernate 6.3
java 21